# PG3D_Reach_Task

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  err.txt  err2.txt  pyproject.toml
Real-data-zarr-setup/: analyse-real-data.ipynb  analyse-sim-data.ipynb  check-success-rate.py  construct-zarr.py  dataset_creation_helper.py  dataset_golden_fire.py  episode_target_mapping.json  offset-correction.py  verify-dataset.py
dataset_generation/: analyze_multimodal_dataset.py  build_xarm7_robotiq_urdf.py  goal_markers.py  write_maniskill_reach_dataset.py  write_xarm7_gripper_reach_dataset.py  write_xarm7_reach_dataset.py
docs/: codex_best_practices.md  milestones.md  project_proposal.html  refactor_policy.md  research_brief.md  review_checklist.md  status.md
docs/adr/: 0000-adr-template.md  0001-reach-first-mvp.md  0002-maniskill-primary-simulator.md  0003-dp3-p0-policy.md  0004-action-representation.md  (+5 more)
new_training/: train_dp3_reach.py
pg3d/: __init__.py
scripts/: accuracy_chk_nitin.py  audit_goal_consistency.py  build_nominal_path_constraints.py  check_gpu.py  check_maniskill.py  compare_world_model_rollout.py  convert_reach_zarr_abs_to_delta.py  debug_xarm7_gripper_datagen.py  diagnose_reach_dataset.py  eval_constrained_reach.py  eval_dp3_reach_dataset.py  eval_reach_checkpoint_unique_seeds  eval_reach_checkpoint_unique_seeds.py  extract_reach_zarr_episode.py  multimodality.py  plot_constrained_reach_summary.py  plot_reranking_replan_candidates.py  preview_xarm7_gripper_env.py  replay_maniskill_reach_dataset.py  replay_xarm7_trajectory_real.py  rollout_dp3_reach_policy.py  rollout_dp3_reach_policy_nitin.py  save_maniskill_observation.py  slice_reach_zarr.py  smoke_dp3_policy.py  smoke_imports.py  train_dp3_reach.py  trajectory_curved_datageneration.py  trajectory_tree_world_model.py  verify_xarm7_reachability.py  visualize.py  visualize_constrained_candidates_for_varun's_dp3py  visualize_constrained_candidates_multimodality.py  visualize_training_dataset.py  visualize_world_model_rollout.py  visualize_xarm_trajectories.py  viz_constrained_candidates_rerun.py  write_maniskill_reach_dataset.py
tests/: test_composition.py  test_constrained_reach_eval.py  test_constraint_viz.py  test_constraints.py  test_dp3_imports.py  test_dp3_policy_smoke.py  test_dp3_reach_dataset.py  test_dp3_reach_rollout.py  test_dp3_reach_training.py  test_maniskill_adapter_types.py  test_maniskill_reach_dataset.py  test_maniskill_reach_writer.py  test_smoke.py  test_utils.py  test_world_model.py  test_world_model_comparison.py
training_without_conditioning/: README.md  pyproject.toml  train_dp3_reach.py
(+93 files in other folders)
