[project]
name = "pg3d"
version = "0.1.0"
description = "Programmatic geometric guidance for 3D diffusion policies in simulation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.11",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3",
  "diffusers>=0.35",
  "einops>=0.7",
  "h5py>=3.10",
  "zarr>=2.16,<3.0",
  "opencv-python>=4.9",
  "pillow>=10",
  "matplotlib>=3.8",
  "imageio[ffmpeg]>=2.34",
  "trimesh>=4.3",
  "wandb>=0.17",
  "rerun-sdk==0.22.1",
  "dill>=0.4.1",
]

[project.optional-dependencies]
# For CPU-only machines, docs-only work, code review, and lightweight tests.
cpu = [
  "torch==2.11.0",
  "torchvision==0.26.0",
  "torchaudio==2.11.0",
]

# Primary workstation target:
# RTX 5090 / CUDA 12.9 / Python 3.11.
cu129 = [
  "torchvision==0.26.0",
  "torchaudio==2.11.0",
]

# ManiSkill is optional so package imports and CPU-only tests stay simulator-free.
maniskill = [
  "mani_skill==3.0.1",
]

# Optional visualization tooling for point-cloud artifact inspection.
viz = [
  "rerun-sdk==0.22.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ipython>=8.25",
]

notebooks = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "external",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
